# DjangoShorteningService

./: .gitignore  .pylintrc  pyproject.toml
URLShorteningService/: settings.py  urls.py
api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_rename_urlmodel_url.py
